feat(donjon): add wave, reward, upgrade ui and sounds interactive faction